syntax = "proto3";


message Rect {
    int32 x = 1;
    int32 y = 2;
    int32 width = 3;
    int32 height = 4;
}

message FacesRecognitionEvent {
    repeated Rect faces = 1;
}